fix code tag wrapping

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,3 +64,7 @@ $link-color: $sidebar-bg-color;
 :root {
   --color-primary: #ac4142;
 }
+
+code {
+  overflow-wrap: break-word;
+}
